update to pages, changes in layouts, and scss

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
   <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Gafata' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300' rel='stylesheet' type='text/css'>
   <!-- build:css({.tmp,app}) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
@@ -46,7 +46,7 @@
             <ul>
               <li><a href="#/home">Home</a></li>
               <li><a href="#/work">Work</a></li>
-              <li><a href="#/projects">Projects</a></li>
+              <!-- li><a href="#/projects">Projects</a></li -->
               <li><a href="http://weseldridge.com/blog">Blog</a></li>
               <li><a href="#/contact">Contact</a></li>
             </ul>
