update to social media icons and supporting css

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Gafata' rel='stylesheet' type='text/css'>
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link href='http://fonts.googleapis.com/css?family=Raleway:500' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,300' rel='stylesheet' type='text/css'>
   <!-- build:css({.tmp,app}) styles/main.css -->
@@ -53,12 +52,13 @@
           </nav>
           <div class="social">
             <ul>
-              <li><a href="https://twitter.com/weseldridge"><img src="images/social-twitter.png"></a></li>
+              <li><a href="https://twitter.com/weseldridge"><i class="fa fa-twitter"></i></a></li>
+              <li><a href="https://github.com/weseldridge"><i class="fa fa-github"></i></a></li>
             </ul>
           </div>
         </div>
       </div>
-      
+
         <div ng-view=""></div>
 
         <footer>
@@ -72,7 +72,7 @@
        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-     ga('create', 'UA-XXXXX-X');
+     ga('create', 'UA-34718740-1');
      ga('send', 'pageview');
      </script>
 
